--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@
     }
     .nav-menu {
         display: flex;
+        margin: 10px;
         justify-content: space-between;
         align-items: center;
     }
