--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 #contact-title{
     text-align:center;
 }
-#body{background: #e1e3e8;}
+#body{background: #e1e3e8;
+}
+
 .b{padding-left: 20px;
     color:#c16e4b;
     font-size: 35px;
