--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .b{padding-left: 20px;
-    color:#c16e4b;
+    color:darkcyan;
     font-size: 35px;
     text-align: center;}
     .pb{
@@ -68,6 +68,7 @@ text-align: center;}
     }
     .service-wrapper{
         background-color: #9393933e;
+
     }
     .h{color: #0c0c0d;
         font-size: 25px;
@@ -285,6 +286,22 @@ font-family:Georgia, 'Times New Roman', Times, serif
         
 /*DESKTOP MEDIA QUERY*/
 @media screen and (min-width:769px) {
+    .service{color: rgb(13, 15, 15);
+        padding: 10px;
+    text-align: center;}
+        .service-p{
+            color: white;
+            padding: 10px;
+            padding-left: 30%;
+            text-align: center;
+            max-width: 40%;
+            margin: 10px;
+        }
+        .service-wrapper{
+            background-color: #9393933e;
+           
+       
+        }
     .h{color: #0c0c0d;
         color: #0c0c0d;
         font-size: 25px;
@@ -393,37 +410,6 @@ font-family:Georgia, 'Times New Roman', Times, serif
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
-
-    /* .header{
-        display: none;
-    }
-.nav-a{
-    margin: 30px 10px 30px 10px;
-}
-.hambuger{display: none;}
-.nav{
-    background: gray;
-    text-align: center;
-    margin: 10px 0px 20px 10px;
-    padding: 15px 20px 10px 20px
-}
-
-
-.nav> li{
-    display: inline-block;
-    color: goldenrod;
-    text-align: center;
-}
-.nav li a{
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 10px 10px;
-}
-a:hover{
-    color: wheat;
-    cursor: pointer;
-} */
 
     .home{
         display: grid;
