--- a/style.css
+++ b/style.css
@@ -6,16 +6,26 @@
 .fe{
     color: darkcyan;
 }
-
+.ka{color: darkcyan;}
 .b{padding-left: 20px;
     color:darkcyan;
     font-size: 35px;
     text-align: center;}
     .pb{
-        color: rgb(255, 255, 255);
+        color: rgb(70, 64, 64);
         font-size: 19px;
-        line-height: 1.4em;
+        line-height: 2em;
+        padding: 15px;
        
+    }
+    .b-headimg{
+     background-attachment:initial;
+        margin-top: 10px;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+      
+        background-image: url(b-background.jpg);
     }
     .bhome{ 
         background-position: center;
@@ -58,13 +68,23 @@
 }
 
 @media screen and (min-width: 250px) and (max-width: 768px){
-    .service{color: rgb(13, 15, 15);
-    padding: 10px;
-text-align: center;}
-    .service-p{
-        color: white;
+    .service{color: rgba(255, 255, 255, 0.885);
         padding: 10px;
-        margin: 10px;
+        margin-left: 20%;
+        text-align: center;
+        max-width: 60%;
+   
+    text-align: center;
+background-color: rgba(6, 41, 63, 0.885)}
+    .service-p{
+        color: rgb(233, 134, 134);
+        text-align: center;
+          margin: 10px;
+          padding: 10px;
+            font-size: 20px;
+            line-height: 1.3em;
+            font-weight: 550;
+        
     }
     .service-wrapper{
         background-color: #9393933e;
@@ -203,8 +223,8 @@ font-size: 20px;
 .benefits{
     text-align: center;
     font-size: 20px;
-    background-color: #9393933e;
-    margin-top : 15%;
+
+    margin-top : 16px;
     padding: 60px ;
     
 }
@@ -286,16 +306,24 @@ font-family:Georgia, 'Times New Roman', Times, serif
         
 /*DESKTOP MEDIA QUERY*/
 @media screen and (min-width:769px) {
-    .service{color: rgb(13, 15, 15);
+    .service{color: rgba(255, 255, 255, 0.885);
         padding: 10px;
-    text-align: center;}
+        margin-left: 20%;
+        text-align: center;
+        max-width: 60%;
+   
+    text-align: center;
+background-color: rgba(6, 41, 63, 0.885)}
         .service-p{
-            color: white;
+            color: rgb(233, 134, 134);
             padding: 10px;
-            padding-left: 30%;
+            padding-left: 20%;
             text-align: center;
-            max-width: 40%;
+            max-width: 60%;
             margin: 10px;
+            font-size: 20px;
+            line-height: 1.3em;
+            font-weight: bolder;
         }
         .service-wrapper{
             background-color: #9393933e;
@@ -436,10 +464,19 @@ font-weight: bold;
         align-items: center;
         text-align: center;
         font-size: 20px;
-        
-        margin: 30px 40px 10px 40px;
-        padding:30px 40px 10px 40px ;
-        
+        margin: 10px;
+        display: grid;
+    padding: 20px;
+    grid-template-columns: repeat(2,3fr) ;
+    grid-template-rows:repeat(2,minmax(150px,auto)) ;
+    max-width: 2000px;
+  
+    }
+    .bdiv{
+        background-color: #a5979736;
+        padding: 20px;
+        margin: 5px;
+        min-height:350px;
     }
     .boxes{
         width: 300px;
